--- a/src/components/Spinner/Spinner.scss
+++ b/src/components/Spinner/Spinner.scss
@@ -29,7 +29,7 @@ $color-tail: #c48344;
   border: 5px solid $color-border;
 
   &:before {
-    content: "";
+    content: '';
     position: absolute;
     top: 37.5px;
     left: 37.5px;
@@ -40,7 +40,7 @@ $color-tail: #c48344;
     background-color: $color-background;
   }
   &:after {
-    content: "";
+    content: '';
     position: absolute;
     top: 7px;
     left: 7px;
@@ -58,7 +58,7 @@ $color-tail: #c48344;
   transform-origin: right bottom;
 
   &:before {
-    content: "";
+    content: '';
     position: absolute;
     left: 100%;
     width: 100%;
@@ -67,7 +67,7 @@ $color-tail: #c48344;
     transform-origin: left bottom;
   }
   &:after {
-    content: "";
+    content: '';
     position: absolute;
     top: 100%;
     width: 100%;
@@ -96,7 +96,7 @@ $color-tail: #c48344;
     border-bottom: 0;
 
     &:before {
-      content: "";
+      content: '';
       position: absolute;
       left: calc(50% - 10px);
       bottom: -15px;
@@ -118,7 +118,7 @@ $color-tail: #c48344;
     border-radius: 20px 0 0 0;
 
     &:before {
-      content: "";
+      content: '';
       position: absolute;
       top: -5px;
       left: -45px;
@@ -142,7 +142,7 @@ $color-tail: #c48344;
     border-radius: 0 0 10px 10px;
 
     &:before {
-      content: "";
+      content: '';
       position: absolute;
       top: 0;
       left: -45px;
@@ -165,7 +165,7 @@ $color-tail: #c48344;
     border-radius: 3px;
 
     &:before {
-      content: "";
+      content: '';
       position: absolute;
       top: 0px;
       right: 30px;
@@ -201,7 +201,7 @@ $color-tail: #c48344;
     animation: mouth-animation 2.5s 1s infinite;
 
     &:before {
-      content: "";
+      content: '';
       position: absolute;
       top: 0;
       right: -4px;
@@ -213,7 +213,7 @@ $color-tail: #c48344;
       border-radius: 0 0 10px 10px;
     }
     &:after {
-      content: "";
+      content: '';
       position: absolute;
       top: 0;
       right: 0px;
@@ -234,7 +234,7 @@ $color-tail: #c48344;
     background-color: $color-border;
 
     &:before {
-      content: "";
+      content: '';
       position: absolute;
       top: -5px;
       right: 0;
@@ -244,7 +244,7 @@ $color-tail: #c48344;
       transform: rotate(-10deg);
     }
     &:after {
-      content: "";
+      content: '';
       position: absolute;
       top: 5px;
       right: 0;
@@ -297,7 +297,7 @@ $color-tail: #c48344;
     border-radius: 10px 0 0 10px;
 
     &:before {
-      content: "";
+      content: '';
       position: absolute;
       top: -33px;
       right: 0;
@@ -321,7 +321,7 @@ $color-tail: #c48344;
     border-radius: 14px 0 0 14px;
 
     &:after {
-      content: "";
+      content: '';
       position: absolute;
       right: -28px;
       bottom: -8px;
@@ -331,7 +331,7 @@ $color-tail: #c48344;
       border-radius: 50%;
     }
     &:before {
-      content: "";
+      content: '';
       position: absolute;
       bottom: -7px;
       right: 0;
@@ -346,23 +346,23 @@ $color-tail: #c48344;
 }
 .cat-animation-mask {
   transform: rotate(45deg);
-  animation: mask-animation 2.2s 1s infinite;
+  animation: mask-animation 2.2s infinite;
 
   &:before {
-    animation: mask-animation-sub-right 2.2s 1s infinite;
+    animation: mask-animation-sub-right 2.2s infinite;
   }
   &:after {
-    animation: mask-animation-sub-left 2.2s 1s infinite;
+    animation: mask-animation-sub-left 2.2s infinite;
   }
 }
 .cat-head {
   transform: rotate(70deg);
-  animation: head-animation 2.2s 1s infinite;
+  animation: head-animation 2.2s infinite;
   animation-timing-function: cubic-bezier(0.2, 0, 0.09, 1);
 }
 .cat-foot {
   transform: rotate(25deg);
-  animation: foot-animation 2.2s 1s infinite;
+  animation: foot-animation 2.2s infinite;
   animation-timing-function: cubic-bezier(0.2, 0, 0.45, 1);
 }
 
