--- a/src/components/CardsList/CardList.scss
+++ b/src/components/CardsList/CardList.scss
@@ -10,6 +10,31 @@
     background-size: cover !important;
     padding: 35px 45px;
     margin-bottom: 50px;
+    position: relative;
+    &:before {
+      content: '';
+      position: absolute;
+      border-color: #333;
+      border-style: solid;
+      border-width: 5px 5px 0 0;
+      width: 75%;
+      height: 65%;
+      top: 0;
+      right: 0;
+      transition: all 0.5s ease-out;
+    }
+    &:after {
+      content: '';
+      position: absolute;
+      border-color: #333;
+      border-style: solid;
+      border-width: 0 0 5px 5px;
+      width: 75%;
+      height: 65%;
+      bottom: 0;
+      left: 0;
+      transition: all 0.5s ease-in-out;
+    }
     h2 {
       font-size: 3rem;
       margin-bottom: 15px;
@@ -18,6 +43,7 @@
       width: 100%;
       height: 300px;
       object-fit: cover;
+      z-index: 2;
     }
     &-button {
       display: block;
@@ -28,6 +54,7 @@
       font-family: sans-serif;
       text-decoration: none;
       color: #333;
+      z-index: 2;
       border: 2px solid #333;
       letter-spacing: 2px;
       text-align: center;
