--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -6,10 +6,43 @@
   .card-image {
     width: 400px;
     height: 500px;
-    background-size: cover !important;
     padding: 25px;
     margin: 0 50px;
     cursor: pointer;
+    position: relative;
+    &:before {
+      content: '';
+      position: absolute;
+      border-color: gray;
+      border-style: solid;
+      border-width: 5px 5px 0 0;
+      width: 75%;
+      height: 65%;
+      top: 0;
+      right: 0;
+      transition: all 0.5s ease-out;
+    }
+    &:after {
+      content: '';
+      position: absolute;
+      border-color: gray;
+      border-style: solid;
+      border-width: 0 0 5px 5px;
+      width: 75%;
+      height: 65%;
+      bottom: 0;
+      left: 0;
+      transition: all 0.5s ease-in-out;
+    }
+    &:hover {
+      &:before,
+      &:after {
+        width: 100%;
+        height: 100%;
+        border-color: #000;
+        transition: all 0.5s ease-in-out;
+      }
+    }
     img {
       width: 100%;
       height: 100%;
