--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,5 +1,5 @@
 .header-wrapper {
-  width: 100vw;
+  background: #333;
   .header-container {
     max-width: 1170px;
     margin: 0 auto;
@@ -7,9 +7,22 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    padding: 0 16px;
+    a {
+      margin: 0 16px;
+      font-size: 20px;
+      line-height: 28px;
+      font-weight: 500;
+      color: #fff;
+      text-decoration: none;
+      &:last-child {
+        margin-right: 0;
+      }
+    }
     h1 {
       font-size: 4.5rem;
       cursor: pointer;
+      color: #fff;
     }
   }
 }
